--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url("assets/bg-sepuh-reunion.png") no-repeat center center fixed;
+  background: url("assets/bg-sepuh-reunion.png?v=1") no-repeat center center fixed;
   background-size: cover;
   color: #fff;
   font-family: sans-serif;
